--- a/DissertationThemes.ImporterApp/Properties/launchSettings.json
+++ b/DissertationThemes.ImporterApp/Properties/launchSettings.json
@@ -2,7 +2,8 @@
   "profiles": {
     "DissertationThemes.ImporterApp": {
       "commandName": "Project",
-      "commandLineArgs": "\"E:\\Skola\\Ing\\1. SEMESTER\\Pokrocile objektove technologie\\DissertationThemes\\DissertationThemes.ImporterApp\\phd_temy.csv\" --remove-previous-data"
+      "workingDirectory": "$(ProjectDir)",
+      "commandLineArgs": "phd_temy.csv --remove-previous-data"
     }
   }
 }
